--- a/index.html
+++ b/index.html
@@ -140,15 +140,16 @@
                 In terms of Research, my interests comprise the topics of Empirical Software Engineering, Open Source and InnerSource software development, Human Aspects of Software Engineering, Mining Software Repositories, Data Analysis, and Role of Bots/Automation in Software Development.
               </p>
             </div>
+            <div style="font-family: Arial, Helvetica, sans-serif; font-size: 24px;"><b>I'm on the job market and am looking for positions globally starting in mid-2023. Please <a href="mailto:tapjdey@gmail.com">let me know</a> if you have any leads or are interested in having a discussion!</b></div>
             <!-- NEWS -->
             <div class="row" style="margin-bottom:1cm;">
                 <br>
                 <div style="font-family: Arial, Helvetica, sans-serif; font-size: 28px;"><b>Latest News (September 2022)</b></div>
                 <ul>
                     <li>I'll be serving as a PC member in ICSE'24 Technical Track.</li>
+                    <li>I'm honored to serve as a PC member in ICSE'23 Technical Track, Poster Track, and Artifact Evaluation Track.</li>
                     <li>I am honored to serve as the Publicity & Social Media Co-Chair and PC member for the Mining Challenge Track for the MSR'23 conference.</li>
                     <li>I am honored to serve in the Diversity Committee of Lero and as a member of Lero's Open Source Programme Office (OSPO).</li>
-                    <li>I'm honored to serve as a PC member in ICSE'23 Technical Track.</li>
                     <li>I'm honored to serve as the Proceedings Chair in PROMISE'22.</li>
                     <li>I have been awarded the "Distinguished Reviewer Award" for MSR 2022 Technical Track for the second consecutive year (after MSR'21).</li>
                     <li>I'm honored to have served as the Publicity & Social Media Co-Chair, Shadow-PC Mentor, and PC member (Technical Track) for the MSR'22 conference.</li>
@@ -233,7 +234,7 @@
             <ul>
                 <li> <b>[2024] -</b> Will serve as a PC Member (Technical Track) in the ICSE 2024 conference.</li>
                 <li> <b>[2023] -</b> Will serve as the <a href="https://conf.researchr.org/committee/msr-2023/msr-2023-organizing-committee">Publicity & Social Media Co-Chair</a> and <a href="https://conf.researchr.org/track/msr-2023/msr-2023-mining-challenge">Mining Challenge PC Member</a> in the MSR 2023 conference.</li>
-                <li> <b>[2023] -</b> Will serve as a Program Committee member (Technical Track) in the <a href="https://conf.researchr.org/committee/icse-2023/icse-2023-technical-track-programme-committee">ICSE'23 conference.</a></li> 
+                <li> <b>[2023] -</b> Will serve as a Program Committee member (Technical Track, Poster Track, Artifact Evaluation Track) in the <a href="https://conf.researchr.org/committee/icse-2023/icse-2023-technical-track-programme-committee">ICSE'23 conference.</a></li> 
                 <li> <b>[2022] -</b> Will serve as the Proceedings Chair in the <a href="https://promiseconf.github.io/2022/index.html">PROMISE'22 conference.</a></li>
                 <li> <b>[2022] -</b> Served as <a href="https://conf.researchr.org/committee/msr-2022/msr-2022-organizing-committee">Publicity & Social Media Co-Chair</a>, 
                   <a href="https://conf.researchr.org/committee/msr-2022/msr-2022-shadow-pc-shadow-pc-advisors"> Committee Member in Shadow PC Advisors within the Shadow PC-track</a>,  
