--- a/pubs.html
+++ b/pubs.html
@@ -38,6 +38,37 @@ a.tlk:link, a.tlk:visited, .tlk {
 
 <table>
 
+    <tr valign="top">
+    <td align="right" class="bibtexnumber">
+    [<a name="9904025">18</a>]
+    </td>
+    <td class="bibtexitem">
+    Tapajit Dey, Willem Jiang, and Brian Fitzgerald.
+     Knights and gold stars: A tale of innersource incentivization.
+     <em>IEEE Software</em>, pages 2--12, 2022.
+    [&nbsp;<a href="pubs_bib.html#9904025">bib</a>&nbsp;| 
+    <a href="http://dx.doi.org/10.1109/MS.2022.3192647">DOI</a>&nbsp;]
+
+    </td>
+    </tr>
+
+
+    <tr valign="top">
+    <td align="right" class="bibtexnumber">
+    [<a name="mahmoud2022one">17</a>]
+    </td>
+    <td class="bibtexitem">
+    Ahmed Samir&nbsp;Imam Mahmoud, Tapajit Dey, Alexander Nolte, Audris Mockus, and
+      James&nbsp;D Herbsleb.
+     One-off events? an empirical study of hackathon code creation and
+      reuse.
+     <em>Empirical Software Engineering</em>, 27(7):1--49, 2022.
+    [&nbsp;<a href="pubs_bib.html#mahmoud2022one">bib</a>&nbsp;|
+    <a href="https://link.springer.com/article/10.1007/s10664-022-10201-x">Print (Open Access)</a>]
+
+    </td>
+    </tr>
+
   <tr valign="top">
     <td align="right" class="bibtexnumber">
     [<a name="dey2021skillspace">16</a>]
