--- a/pubs_bib.html
+++ b/pubs_bib.html
@@ -7,7 +7,32 @@
 </head>
 
 <body>
-<h1>Publication Bibtex</h1>
+<h1>pubs.bib</h1><a name="9904025"></a><pre>
+@article{<a href="pubs.html#9904025">9904025</a>,
+  author = {Dey, Tapajit and Jiang, Willem and Fitzgerald, Brian},
+  journal = {IEEE Software},
+  title = {Knights and Gold Stars: A Tale of InnerSource Incentivization},
+  year = {2022},
+  volume = {},
+  number = {},
+  pages = {2-12},
+  doi = {10.1109/MS.2022.3192647}
+}
+</pre>
+
+<a name="mahmoud2022one"></a><pre>
+@article{<a href="pubs.html#mahmoud2022one">mahmoud2022one</a>,
+  title = {One-off events? An empirical study of hackathon code creation and reuse},
+  author = {Mahmoud, Ahmed Samir Imam and Dey, Tapajit and Nolte, Alexander and Mockus, Audris and Herbsleb, James D},
+  journal = {Empirical Software Engineering},
+  volume = {27},
+  number = {7},
+  pages = {1--49},
+  year = {2022},
+  publisher = {Springer}
+}
+</pre>
+
 <a name="dey2021skillspace"></a><pre>
 @inproceedings{<a href="pubs.html#dey2021skillspace">dey2021skillspace</a>,
   author = {Dey, Tapajit and Karnauch, Andrey and Mockus, Audris},
