--- a/misc_bib.html
+++ b/misc_bib.html
@@ -7,9 +7,7 @@
 </head>
 
 <body>
-<h1><a href="misc.html">back to list</a></h1>
-
-<a name="ma2016crowdsourcing"></a><pre>
+<h1>misc.bib</h1><a name="ma2016crowdsourcing"></a><pre>
 @article{<a href="misc.html#ma2016crowdsourcing">ma2016crowdsourcing</a>,
   title = {Crowdsourcing the discovery of software repositories in an educational environment},
   author = {Ma, Yuxing and Dey, Tapajit and Smith, Jarred M and Wilder, Nathan and Mockus, Audris},
@@ -76,26 +74,7 @@
   pages = {236--237},
   year = {2021},
   organization = {IEEE},
-  url={https://doi.org/10.5281/zenodo.4457107}
-}
-</pre>
-
-<a name="dey2022knights"></a><pre>
-@article{<a href="misc.html#dey2022knights">dey2022knights</a>,
-  title = {Knights and Gold Stars: A Tale of InnerSource Incentivization},
-  author = {Dey, Tapajit and Jiang, Willem and Fitzgerald, Brian},
-  journal = {arXiv preprint arXiv:2207.08475},
-  year = {2022}
-}
-</pre>
-
-<a name="samir2022one"></a><pre>
-@article{<a href="misc.html#samir2022one">samir2022one</a>,
-  title = {One-off Events? An Empirical Study of Hackathon Code Creation and Reuse},
-  author = {Samir Imam Mahmoud, Ahmed and Dey, Tapajit and Nolte, Alexander and Mockus, Audris and Herbsleb, James D},
-  journal = {arXiv e-prints},
-  pages = {arXiv--2207},
-  year = {2022}
+  url = {https://doi.org/10.5281/zenodo.4457107}
 }
 </pre>
 
