delete job text

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 In terms of Research, my interests comprise the topics of Empirical Software Engineering, Open Source and InnerSource software development, Human Aspects of Software Engineering, Mining Software Repositories, Data Analysis, and Role of Bots/Automation in Software Development.
               </p>
             </div>
-            <div style="font-family: Arial, Helvetica, sans-serif; font-size: 24px;"><b>I'm on the job market and am looking for positions globally starting in mid-2023. Please <a href="mailto:tapjdey@gmail.com">let me know</a> if you have any leads or are interested in having a discussion!</b></div>
+            <!-- <div style="font-family: Arial, Helvetica, sans-serif; font-size: 24px;"><b>I'm on the job market and am looking for positions globally starting in mid-2023. Please <a href="mailto:tapjdey@gmail.com">let me know</a> if you have any leads or are interested in having a discussion!</b></div> -->
             <!-- NEWS -->
             <div class="row" style="margin-bottom:1cm;">
                 <br>
