Update date & added paper name.

--- a/index.html
+++ b/index.html
@@ -146,12 +146,13 @@
             <!-- NEWS -->
             <div class="row" style="margin-bottom:1cm;">
                 <br>
-                <div style="font-family: Arial, Helvetica, sans-serif; font-size: 28px;"><b>Latest News (September 2022)</b></div>
+                <div style="font-family: Arial, Helvetica, sans-serif; font-size: 28px;"><b>Latest News (May 2023)</b></div>
                 <ul>
                     <li>I'll be serving as a PC member in ICSE'24 Technical Track.</li>
                     <li>I'll be serving as a PC member in PROMISE 2023.</li>
                     <li>Robert Healy, a professional Ph.D. student I am co-supervising at the University of Limerick, has had a 
-                      paper accepted at the XP 2023 conference.
+                      paper titled <a href="https://link.springer.com/chapter/10.1007/978-3-031-33976-9_2">"A Novel Technique to Assess Agile Systems for Stability"</a>
+                       accepted at the XP 2023 conference.
                     </li>
                     </ul>
             </div>
