--- a/index.html
+++ b/index.html
@@ -230,10 +230,10 @@
             <br>
             <ul>
                 <li> <b>[2024] -</b> Will serve as a PC Member (Technical Track) in the ICSE 2024 conference.</li>
-                <li> <b>[2022] -</b> Will serve as a PC Member in the <a href="https://promiseconf.github.io/2023/index.html">PROMISE'23 conference.</a></li>
-                <li> <b>[2023] -</b> Will serve as the <a href="https://conf.researchr.org/committee/msr-2023/msr-2023-organizing-committee">Publicity & Social Media Co-Chair</a> and <a href="https://conf.researchr.org/track/msr-2023/msr-2023-mining-challenge">Mining Challenge PC Member</a> in the MSR 2023 conference.</li>
-                <li> <b>[2023] -</b> Will serve as a Program Committee member (Technical Track, Poster Track, Artifact Evaluation Track) in the <a href="https://conf.researchr.org/committee/icse-2023/icse-2023-technical-track-programme-committee">ICSE'23 conference.</a></li> 
-                <li> <b>[2022] -</b> Will serve as the Proceedings Chair in the <a href="https://promiseconf.github.io/2022/index.html">PROMISE'22 conference.</a></li>
+                <li> <b>[2023] -</b> Will serve as a PC Member in the <a href="https://promiseconf.github.io/2023/index.html">PROMISE'23 conference.</a></li>
+                <li> <b>[2023] -</b> Served as the <a href="https://conf.researchr.org/committee/msr-2023/msr-2023-organizing-committee">Publicity & Social Media Co-Chair</a> and <a href="https://conf.researchr.org/track/msr-2023/msr-2023-mining-challenge">Mining Challenge PC Member</a> in the MSR 2023 conference.</li>
+                <li> <b>[2023] -</b> Served as a Program Committee member (Technical Track, Poster Track, Artifact Evaluation Track) in the <a href="https://conf.researchr.org/committee/icse-2023/icse-2023-technical-track-programme-committee">ICSE'23 conference.</a></li> 
+                <li> <b>[2022] -</b> Served as the Proceedings Chair in the <a href="https://promiseconf.github.io/2022/index.html">PROMISE'22 conference.</a></li>
                 <li> <b>[2022] -</b> Served as <a href="https://conf.researchr.org/committee/msr-2022/msr-2022-organizing-committee">Publicity & Social Media Co-Chair</a>, 
                   <a href="https://conf.researchr.org/committee/msr-2022/msr-2022-shadow-pc-shadow-pc-advisors"> Committee Member in Shadow PC Advisors within the Shadow PC-track</a>,  
                   and <a href="https://conf.researchr.org/committee/msr-2022/msr-2022-technical-papers-program-committee">Program Committee member (Technical Track)</a> in the MSR 2022 conference.</li>               
